--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @tailwind base; */
+@tailwind components;
+@tailwind utilities;
 :root {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
